# CMake_N_CppUnitTesting

./: .gitignore  .gitmodules
.github/workflows/: test.yaml
00_Starter/: CMakeLists.txt  Main.cc
00_Starter/.github/workflows/: test.yaml
01_ProjectStructure/: CMakeLists.txt
01_ProjectStructure/application/: CMakeLists.txt  Main.cc
01_ProjectStructure/src/: CMakeLists.txt  Library.cc
02_ProjectStructure_Intermediate/: CMakeLists.txt  ReadMe.md
02_ProjectStructure_Intermediate/application/: Main.cc
02_ProjectStructure_Intermediate/src/: Library.h
03_ConfigurationFiles/: CMakeLists.txt
03_ConfigurationFiles/application/: CMakeLists.txt  Main.cc
03_ConfigurationFiles/configured/: CMakeLists.txt  config.hpp.in
03_ConfigurationFiles/src/: CMakeLists.txt  Library.cc
04_ExternalGit/: .gitmodules  CMakeLists.txt  Makefile  conanfile.txt
04_ExternalGit/application/: CMakeLists.txt  Main.cc
04_ExternalGit/cmake/: AddGitSubmodule.cmake  Docs.cmake
04_ExternalGit/docs/: Doxyfile
04_ExternalGit/src/: CMakeLists.txt  Library.h
04_ExternalGit/tests/: CMakeLists.txt
